--- a/style.css
+++ b/style.css
@@ -469,6 +469,7 @@ footer{
 }
 summary::marker{
 color: var(--negro);
+font-size: 3vw;
 }
 .seccion{
 width: 100%;
@@ -504,20 +505,27 @@ align-items: center;
 flex-direction: column;
 }
 .nombart{
-font-size: 4vw;
+font-size: 3vw;
 font-family: var(--roboto);
 color: var(--negro);
 font-weight:bolder;
 }
+.nombart:hover{
+  cursor: pointer;
+}
 .btn,.btnc,.btnlc{
 width: auto;
-font-size: 2vw;
+font-size: 1vw;
 background-color: var(--azul);
 font-family: var(--roboto);
 color: var(--blanco);
 border-radius: 1vw;
-padding: 1vw ;
+padding: 0.8vw ;
 text-align: center;
+}
+
+.btn:hover,.btnc:hover,.btnlc:hover{
+ background-color: #118ab6;
 }
 .btn:active{
 background-color:#129acc;
@@ -527,10 +535,10 @@ background-color:#129acc;
   }
 /*botón agregar*/
 .agregar{
-width: 5vw;
-height: 5vw;
+width: 4vw;
+height: 4vw;
 border-radius: 50%;
-border: 2px solid var(--naranja);
+border: 4px solid var(--naranja);
 color: var(--verde);
 font-size: 4vw;
 display: flex;
@@ -539,6 +547,7 @@ align-items: center;
 }
 .agregar:hover{
   cursor: pointer;
+  border: 4px solid #d16f3a;
   }
 /*Lista completa*/
 .demlist{
@@ -549,7 +558,7 @@ flex-direction: column;
 gap: 2vw;
 }
 .liscomptit{
-font-size: 8vw ;
+font-size: 5vw ;
 font-family: var(--yanone);
 color: var(--negro);
 width: 100%;
@@ -622,8 +631,12 @@ border-bottom: 2px solid var(--naranja);
 outline: none;
 color: var(--negro);
 font-family: var(--roboto);
-font-size: 3vw;
+font-size: 2vw;
 text-align: center;
+transition: all 0.1s;
+}
+.inpagrmas:hover{
+  border-bottom: 4px solid var(--naranja);
 }
 .inpagrmas::placeholder{
 font-family: var(--roboto);
@@ -633,10 +646,10 @@ font-size: 2vw;
 }
 .btnc{
 width:7vw ;
-font-size:2vw ;
+font-size:1.5vw ;
 }
 .btnlc{
-    font-size:2vw ;
+    font-size:1.5vw ;
     width: auto;
 }
 .btnc,.btnlc:hover{
@@ -644,35 +657,39 @@ font-size:2vw ;
   }
 /*agregar más*/
 .contelmagrmas{
-  width: 45vw;
-  padding: 4vw;
+  width: 30vw;
+  padding: 2vw;
   display: flex;
   flex-wrap: wrap;
   align-items:center ;
   justify-content: center;
-  gap: 3vw;
-  border-radius: 4vw;
+  gap: 2vw;
+  border-radius: 2vw;
   box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.3);
   background-color: var(--blanco);
 }
 .inpcontagrmas,.inpcontedit{
-  width: 100%;
+  width: 70%;
   outline: none;
   border: none;
   border-bottom:2px solid var(--naranja);
   font-family: var(--roboto);
-  font-size: 4vw;
+  font-size: 2vw;
   text-align: center;
   background-color: none;
+  transition: all 0.1s;
+}
+.inpcontagrmas,.inpcontedit:hover{
+  border-bottom:4px solid var(--naranja);
 }
 .btnpeq{
   width: auto;
-font-size: 3vw;
+font-size: 1.5vw;
 font-family: var(--roboto);
 color: var(--blanco);
 border: none;
 border-radius: 1vw;
-padding: 1vw 3vw;
+padding: 0.6vw 0.6vw;
 text-align: center;
 }
 .btnpeq:hover{
@@ -681,11 +698,19 @@ text-align: center;
 .verde{
   background-color: var(--verde);
 }
+
 .rojo{
   background-color: var(--rojo);
 }
+
 footer{
     width: 100%;
     padding: 5vw;
 }
+}
+.verde:hover{
+  background-color: #36d14b;
+}
+.rojo:hover{
+background-color: #d13636;
 }
